--- a/dataCollection/api.ipynb
+++ b/dataCollection/api.ipynb
@@ -2,17 +2,572 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "key = \"662d189b5ca1829229a239bf7a079f6ab2c89c10\""
+    "import requests\n",
+    "import pandas as pd"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "key = \"4dd05398874a3f0c4f32e74f4c0fa269655cf923\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Response [400]>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "requests.get(\"https://api.census.gov/data/2023/acs/acs1/profile?get=NAME&for=urban%20area:*\"+key)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "urbanAreas = requests.get(\"https://api.census.gov/data/2023/acs/acs1/profile?get=NAME&for=urban%20area:*\")\n",
+    "\n",
+    "cities = urbanAreas.json()\n",
+    "cityDF = pd.DataFrame(cities)\n",
+    "cityDF.to_csv('apiCity.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "urban_areas_df = pd.read_csv('../datasets/capstoneData.csv')\n",
+    "urban_areas = urban_areas_df['CensusCode']  # Assuming this column contains urban area codes (400)\n",
+    "codes = urban_areas_df.iloc[:, 3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0     02305\n",
+       "1     40780\n",
+       "2     07786\n",
+       "3     50392\n",
+       "4     69184\n",
+       "      ...  \n",
+       "95    83764\n",
+       "96    53200\n",
+       "97    57466\n",
+       "98    15481\n",
+       "99    16237\n",
+       "Name: CensusCode, Length: 100, dtype: object"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "urban_areas_df = pd.read_csv('../datasets/capstoneData.csv', dtype={'CensusCode': str})\n",
+    "\n",
+    "# If you're selecting the 3rd column (index 2), convert it to string as well\n",
+    "codes = urban_areas_df.iloc[:, 3]\n",
+    "codes\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "          City     State StateCode CensusCode Population\n",
+      "0    Anchorage    Alaska        AK      02305     245624\n",
+      "1   Huntsville   Alabama        AL      40780     359389\n",
+      "2   Birmingham   Alabama        AL      07786     778756\n",
+      "3  Little Rock  Arkansas        AR      50392     467846\n",
+      "4      Phoenix   Arizona        AZ      69184    4065338\n"
+     ]
+    }
+   ],
+   "source": [
+    "populations = []\n",
+    "for i in codes:\n",
+    "    response = requests.get(f\"https://api.census.gov/data/2023/acs/acsse?get=NAME,K200101_001E&for=urban%20area:{i}&key={key}\")\n",
+    "    \n",
+    "    if response.status_code == 200:  # Check if the request was successful\n",
+    "        data = response.json()\n",
+    "        value = data[1][1]  # Access the second list, then the second element (the population)\n",
+    "        populations.append(value)  # Add the population to the list\n",
+    "    else:\n",
+    "        print(f\"Error: {response.status_code} for urban area code {i}\")\n",
+    "        populations.append(None)  # Append None if there was an error for this code\n",
+    "\n",
+    "# Add the population data as a new column in the DataFrame\n",
+    "urban_areas_df['Population'] = populations\n",
+    "\n",
+    "# Save the updated DataFrame back to a CSV file\n",
+    "urban_areas_df.to_csv('updated_capstoneData.csv', index=False)\n",
+    "\n",
+    "# Optionally, check the DataFrame to see the new column\n",
+    "print(urban_areas_df.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "197589\n",
+      "301448\n",
+      "669858\n",
+      "409973\n",
+      "3457480\n",
+      "728456\n",
+      "1730929\n",
+      "2636413\n",
+      "2922256\n",
+      "1499746\n",
+      "10680530\n",
+      "81865\n",
+      "507435\n",
+      "2220545\n",
+      "279237\n",
+      "482609\n",
+      "859217\n",
+      "4377744\n",
+      "107616\n",
+      "164227\n",
+      "1083342\n",
+      "5261172\n",
+      "1617321\n",
+      "203313\n",
+      "2463459\n",
+      "371916\n",
+      "111020\n",
+      "4492313\n",
+      "215299\n",
+      "254025\n",
+      "722550\n",
+      "469809\n",
+      "372413\n",
+      "7498122\n",
+      "1487031\n",
+      "239642\n",
+      "69017\n",
+      "422397\n",
+      "823601\n",
+      "202302\n",
+      "811945\n",
+      "3786006\n",
+      "1903204\n",
+      "182612\n",
+      "240990\n",
+      "522535\n",
+      "256178\n",
+      "3302368\n",
+      "2507900\n",
+      "101919\n",
+      "1462915\n",
+      "1865503\n",
+      "287171\n",
+      "46971\n",
+      "1218584\n",
+      "323810\n",
+      "259573\n",
+      "281130\n",
+      "972022\n",
+      "174272\n",
+      "240059\n",
+      "703271\n",
+      "136113\n",
+      "263241\n",
+      "664666\n",
+      "385052\n",
+      "1893730\n",
+      "831781\n",
+      "16972962\n",
+      "1483217\n",
+      "1306367\n",
+      "827094\n",
+      "626717\n",
+      "1764478\n",
+      "219099\n",
+      "1499862\n",
+      "5025246\n",
+      "1113285\n",
+      "595986\n",
+      "501408\n",
+      "180920\n",
+      "343914\n",
+      "890077\n",
+      "532120\n",
+      "986747\n",
+      "1574570\n",
+      "4960520\n",
+      "5137101\n",
+      "1696728\n",
+      "515145\n",
+      "980758\n",
+      "908718\n",
+      "1204716\n",
+      "95437\n",
+      "2960643\n",
+      "386753\n",
+      "360680\n",
+      "1129593\n",
+      "121105\n",
+      "69092\n",
+      "          City     State StateCode CensusCode Population sameHouse1yr\n",
+      "0    Anchorage    Alaska        AK      02305     245624       197589\n",
+      "1   Huntsville   Alabama        AL      40780     359389       301448\n",
+      "2   Birmingham   Alabama        AL      07786     778756       669858\n",
+      "3  Little Rock  Arkansas        AR      50392     467846       409973\n",
+      "4      Phoenix   Arizona        AZ      69184    4065338      3457480\n"
+     ]
+    }
+   ],
+   "source": [
+    "geographicMobility = []\n",
+    "for i in codes:\n",
+    "    response = requests.get(f\"https://api.census.gov/data/2023/acs/acsse?get=NAME,K200701_002E&for=urban%20area:{i}&key={key}\")\n",
+    "    \n",
+    "    if response.status_code == 200:  # Check if the request was successful\n",
+    "        data = response.json()\n",
+    "        value = data[1][1] \n",
+    "        #print(value) # Access the second list, then the second element (the population)\n",
+    "        geographicMobility.append(value)  # Add the population to the list\n",
+    "    else:\n",
+    "        print(f\"Error: {response.status_code} for urban area code {i}\")\n",
+    "        geographicMobility.append(None)  # Append None if there was an error for this code\n",
+    "\n",
+    "#Add the population data as a new column in the DataFrame\n",
+    "urban_areas_df['sameHouse1yr'] = geographicMobility\n",
+    "\n",
+    "# Save the updated DataFrame back to a CSV file\n",
+    "urban_areas_df.to_csv('updated_capstoneData.csv', index=False)\n",
+    "\n",
+    "# Optionally, check the DataFrame to see the new column\n",
+    "print(urban_areas_df.head())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>City</th>\n",
+       "      <th>State</th>\n",
+       "      <th>StateCode</th>\n",
+       "      <th>CensusCode</th>\n",
+       "      <th>Population</th>\n",
+       "      <th>sameHouse1yr</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Anchorage</td>\n",
+       "      <td>Alaska</td>\n",
+       "      <td>AK</td>\n",
+       "      <td>02305</td>\n",
+       "      <td>245624</td>\n",
+       "      <td>197589</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Huntsville</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>40780</td>\n",
+       "      <td>359389</td>\n",
+       "      <td>301448</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Birmingham</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>07786</td>\n",
+       "      <td>778756</td>\n",
+       "      <td>669858</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Little Rock</td>\n",
+       "      <td>Arkansas</td>\n",
+       "      <td>AR</td>\n",
+       "      <td>50392</td>\n",
+       "      <td>467846</td>\n",
+       "      <td>409973</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Phoenix</td>\n",
+       "      <td>Arizona</td>\n",
+       "      <td>AZ</td>\n",
+       "      <td>69184</td>\n",
+       "      <td>4065338</td>\n",
+       "      <td>3457480</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>95</th>\n",
+       "      <td>Spokane</td>\n",
+       "      <td>Washington</td>\n",
+       "      <td>WA</td>\n",
+       "      <td>83764</td>\n",
+       "      <td>458988</td>\n",
+       "      <td>386753</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>96</th>\n",
+       "      <td>Madison</td>\n",
+       "      <td>Wisconsin</td>\n",
+       "      <td>WI</td>\n",
+       "      <td>53200</td>\n",
+       "      <td>460255</td>\n",
+       "      <td>360680</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>97</th>\n",
+       "      <td>Milwaukee</td>\n",
+       "      <td>Wisconsin</td>\n",
+       "      <td>WI</td>\n",
+       "      <td>57466</td>\n",
+       "      <td>1290221</td>\n",
+       "      <td>1129593</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>98</th>\n",
+       "      <td>Charleston</td>\n",
+       "      <td>West Virginia</td>\n",
+       "      <td>WV</td>\n",
+       "      <td>15481</td>\n",
+       "      <td>133045</td>\n",
+       "      <td>121105</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99</th>\n",
+       "      <td>Cheyenne</td>\n",
+       "      <td>Wyoming</td>\n",
+       "      <td>WY</td>\n",
+       "      <td>16237</td>\n",
+       "      <td>81378</td>\n",
+       "      <td>69092</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>100 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           City           State StateCode CensusCode Population sameHouse1yr\n",
+       "0     Anchorage          Alaska        AK      02305     245624       197589\n",
+       "1    Huntsville         Alabama        AL      40780     359389       301448\n",
+       "2    Birmingham         Alabama        AL      07786     778756       669858\n",
+       "3   Little Rock        Arkansas        AR      50392     467846       409973\n",
+       "4       Phoenix         Arizona        AZ      69184    4065338      3457480\n",
+       "..          ...             ...       ...        ...        ...          ...\n",
+       "95      Spokane      Washington        WA      83764     458988       386753\n",
+       "96      Madison       Wisconsin        WI      53200     460255       360680\n",
+       "97    Milwaukee       Wisconsin        WI      57466    1290221      1129593\n",
+       "98   Charleston  West Virginia         WV      15481     133045       121105\n",
+       "99     Cheyenne         Wyoming        WY      16237      81378        69092\n",
+       "\n",
+       "[100 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "urban_areas_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "          City     State StateCode CensusCode Population sameHouse1yr  \\\n",
+      "0    Anchorage    Alaska        AK      02305     245624       197589   \n",
+      "1   Huntsville   Alabama        AL      40780     359389       301448   \n",
+      "2   Birmingham   Alabama        AL      07786     778756       669858   \n",
+      "3  Little Rock  Arkansas        AR      50392     467846       409973   \n",
+      "4      Phoenix   Arizona        AZ      69184    4065338      3457480   \n",
+      "\n",
+      "  transportCar  \n",
+      "0        94067  \n",
+      "1       139891  \n",
+      "2       285726  \n",
+      "3       165697  \n",
+      "4      1332557  \n"
+     ]
+    }
+   ],
+   "source": [
+    "car = []\n",
+    "for i in codes:\n",
+    "    response = requests.get(f\"https://api.census.gov/data/2023/acs/acsse?get=NAME,K200801_002E&for=urban%20area:{i}&key={key}\")\n",
+    "    if response.status_code == 200:  # Check if the request was successful\n",
+    "        data = response.json()\n",
+    "        value = data[1][1] \n",
+    "        #print(value) # Access the second list, then the second element (the population)\n",
+    "        car.append(value)  # Add the population to the list\n",
+    "    else:\n",
+    "        print(f\"Error: {response.status_code} for urban area code {i}\")\n",
+    "        car.append(None)  # Append None if there was an error for this code\n",
+    "\n",
+    "#Add the population data as a new column in the DataFrame\n",
+    "urban_areas_df['transportCar'] = car\n",
+    "\n",
+    "# Save the updated DataFrame back to a CSV file\n",
+    "urban_areas_df.to_csv('updated_capstoneData.csv', index=False)\n",
+    "\n",
+    "# Optionally, check the DataFrame to see the new column\n",
+    "print(urban_areas_df.head())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "          City     State StateCode CensusCode Population sameHouse1yr  \\\n",
+      "0    Anchorage    Alaska        AK      02305     245624       197589   \n",
+      "1   Huntsville   Alabama        AL      40780     359389       301448   \n",
+      "2   Birmingham   Alabama        AL      07786     778756       669858   \n",
+      "3  Little Rock  Arkansas        AR      50392     467846       409973   \n",
+      "4      Phoenix   Arizona        AZ      69184    4065338      3457480   \n",
+      "\n",
+      "  transportCar publicTransport  \n",
+      "0        94067           94067  \n",
+      "1       139891          139891  \n",
+      "2       285726          285726  \n",
+      "3       165697          165697  \n",
+      "4      1332557         1332557  \n"
+     ]
+    }
+   ],
+   "source": [
+    "publicTransport = []\n",
+    "for i in codes:\n",
+    "    response = requests.get(f\"https://api.census.gov/data/2023/acs/acsse?get=NAME,K200801_002E&for=urban%20area:{i}&key={key}\")\n",
+    "    if response.status_code == 200:  # Check if the request was successful\n",
+    "        data = response.json()\n",
+    "        value = data[1][1] \n",
+    "        #print(value) # Access the second list, then the second element (the population)\n",
+    "        publicTransport.append(value)  # Add the population to the list\n",
+    "    else:\n",
+    "        print(f\"Error: {response.status_code} for urban area code {i}\")\n",
+    "        publicTransport.append(None)  # Append None if there was an error for this code\n",
+    "\n",
+    "#Add the population data as a new column in the DataFrame\n",
+    "urban_areas_df['publicTransport'] = publicTransport\n",
+    "\n",
+    "# Save the updated DataFrame back to a CSV file\n",
+    "urban_areas_df.to_csv('updated_capstoneData.csv', index=False)\n",
+    "\n",
+    "# Optionally, check the DataFrame to see the new column\n",
+    "print(urban_areas_df.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
