--- a/dataCollection/api.ipynb
+++ b/dataCollection/api.ipynb
@@ -1539,7 +1539,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "urban_areas_df = urban_areas_df.drop(['congressionalDistrict'], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "urban_areas_df.to_csv('../datasets/capstoneData.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -1912,22 +1930,13 @@
        "[100 rows x 26 columns]"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "urban_areas_df.drop(['congressionalDistrict'], axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "urban_areas_df.to_csv('../datasets/capstoneData.csv', index=False)"
+    "urban_areas_df"
    ]
   },
   {
