--- a/dataCollection/geoData.ipynb
+++ b/dataCollection/geoData.ipynb
@@ -20,23 +20,7 @@
     }
    ],
    "source": [
-    "from geopy.geocoders import Nominatim\n",
-    "import pandas as pd\n",
-    "\n",
-    "# Initialize geolocator\n",
-    "geolocator = Nominatim(user_agent=\"geoapiExercises\")\n",
-    "\n",
-    "# Example function to get lat/long from urban area code (city name)\n",
-    "def get_lat_long(city_name):\n",
-    "    location = geolocator.geocode(city_name)\n",
-    "    if location:\n",
-    "        return (location.latitude, location.longitude)\n",
-    "    return None\n",
-    "\n",
-    "# Example of applying the function to a list of cities in a pandas DataFrame\n",
-    "df = pd.DataFrame({'City': ['Denver', 'San Francisco', 'New York']})\n",
-    "df['Coordinates'] = df['City'].apply(get_lat_long)\n",
-    "print(df)\n"
+    "from geopy.geoc"
    ]
   },
   {
