--- a/dataCollection/censusapi.ipynb
+++ b/dataCollection/censusapi.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,35 +54,98 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0     02305\n",
-       "1     40780\n",
-       "2     07786\n",
-       "3     50392\n",
-       "4     69184\n",
+       "0     01171\n",
+       "1     02305\n",
+       "2     02602\n",
+       "3     03763\n",
+       "4     03817\n",
        "      ...  \n",
-       "95    83764\n",
-       "96    53200\n",
-       "97    57466\n",
-       "98    15481\n",
-       "99    16237\n",
+       "95    88948\n",
+       "96    90892\n",
+       "97    92242\n",
+       "98    22612\n",
+       "99    95077\n",
        "Name: CensusCode, Length: 100, dtype: object"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "urban_areas_df = pd.read_csv('../datasets/capstoneData.csv', dtype={'CensusCode': str})\n",
+    "urban_areas_df = pd.read_csv('../datasets/data.csv', dtype={'CensusCode': str})\n",
     "codes = urban_areas_df.iloc[:, 3]\n",
     "codes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'NoneType' object has no attribute 'find'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)\n",
+      "Cell \u001b[0;32mIn[16], line 30\u001b[0m\n",
+      "\u001b[1;32m     28\u001b[0m \u001b[38;5;66;03m# Extract the data from the climate table\u001b[39;00m\n",
+      "\u001b[1;32m     29\u001b[0m climate_data \u001b[38;5;241m=\u001b[39m []\n",
+      "\u001b[0;32m---> 30\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m row \u001b[38;5;129;01min\u001b[39;00m climate_table\u001b[38;5;241m.\u001b[39mfind(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtr\u001b[39m\u001b[38;5;124m'\u001b[39m):\n",
+      "\u001b[1;32m     31\u001b[0m     columns \u001b[38;5;241m=\u001b[39m row\u001b[38;5;241m.\u001b[39mfind_all(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtd\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "\u001b[1;32m     32\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(columns) \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m0\u001b[39m:\n",
+      "\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'find'"
+     ]
+    }
+   ],
+   "source": [
+    "import wikipediaapi\n",
+    "import pandas as pd\n",
+    "from bs4 import BeautifulSoup\n",
+    "import requests\n",
+    "\n",
+    "# Specify a valid user agent\n",
+    "USER_AGENT = 'Julia Kirk (julia.kirk@colorado.edu)'\n",
+    "\n",
+    "# Initialize the Wikipedia API\n",
+    "wiki_wiki = wikipediaapi.Wikipedia(\n",
+    "    language='en',\n",
+    "    user_agent=USER_AGENT\n",
+    ")\n",
+    "\n",
+    "# Specify the city Wikipedia page\n",
+    "page_name = 'Denver'  # Change this to the city you are analyzing\n",
+    "page = wiki_wiki.page(page_name)\n",
+    "\n",
+    "# Fetch the full Wikipedia page\n",
+    "wiki_html = requests.get(page.fullurl, headers={'User-Agent': USER_AGENT}).text\n",
+    "\n",
+    "# Parse the page using BeautifulSoup\n",
+    "soup = BeautifulSoup(wiki_html, 'html.parser')\n",
+    "\n",
+    "# Find the climate chart, usually it's in a table format\n",
+    "climate_table = soup.find('table', {'class': 'wikitable collapsible'})\n",
+    "\n",
+    "# Extract the data from the climate table\n",
+    "climate_data = []\n",
+    "for row in climate_table.find_all('tr'):\n",
+    "    columns = row.find_all('td')\n",
+    "    if len(columns) > 0:\n",
+    "        climate_data.append([col.get_text(strip=True) for col in columns])\n",
+    "\n",
+    "# Convert to a DataFrame for easier manipulation\n",
+    "climate_df = pd.DataFrame(climate_data)\n",
+    "print(climate_df)"
    ]
   },
   {
@@ -601,33 +664,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "          City     State StateCode CensusCode Population sameHouse1yr  \\\n",
-      "0    Anchorage    Alaska        AK      02305     245624       197589   \n",
-      "1   Huntsville   Alabama        AL      40780     359389       301448   \n",
-      "2   Birmingham   Alabama        AL      07786     778756       669858   \n",
-      "3  Little Rock  Arkansas        AR      50392     467846       409973   \n",
-      "4      Phoenix   Arizona        AZ      69184    4065338      3457480   \n",
+      "          City       State StateCode CensusCode  Population  sameHouse1yr  \\\n",
+      "0  Albuquerque  New Mexico        NM      01171      767499        664666   \n",
+      "1    Anchorage      Alaska        AK      02305      245624        197589   \n",
+      "2    Ann Arbor    Michigan        MI      02602      314647        240990   \n",
+      "3       Athens     Georgia        GA      03763      147368        111020   \n",
+      "4      Atlanta     Georgia        GA      03817     5211164       4492313   \n",
       "\n",
-      "  transportCar publicTransport  \n",
-      "0        94067           94067  \n",
-      "1       139891          139891  \n",
-      "2       285726          285726  \n",
-      "3       165697          165697  \n",
-      "4      1332557         1332557  \n"
+      "   transportCar publicTransport  medianIncome  employment  ...  total_bars  \\\n",
+      "0        274494            4204         69754      400902  ...         215   \n",
+      "1         94067            1738         90793      140198  ...         108   \n",
+      "2        101623            7614         76811      174775  ...         114   \n",
+      "3         57523            1221         58872       80817  ...         104   \n",
+      "4       1756729           46795         88351     2881208  ...         696   \n",
+      "\n",
+      "   total_restaurants  total_parks  total_activities  total_nightlife  \\\n",
+      "0               1500          142              1100              222   \n",
+      "1                685          120               755              114   \n",
+      "2                599           73               678              124   \n",
+      "3                413           21               300              105   \n",
+      "4               2700          209              2600              783   \n",
+      "\n",
+      "   total_museums  max_avg_high  max_avg_low  mean_diff  International_airport  \n",
+      "0             57         100.8         10.9       89.9                      1  \n",
+      "1             38          77.7        -13.2       90.9                      1  \n",
+      "2             25          94.3         -5.6       99.9                      0  \n",
+      "3             11         100.0         15.0       85.0                      0  \n",
+      "4            134          97.3         15.2       82.1                      1  \n",
+      "\n",
+      "[5 rows x 63 columns]\n"
      ]
     }
    ],
    "source": [
     "publicTransport = []\n",
     "for i in codes:\n",
-    "    response = requests.get(f\"https://api.census.gov/data/2023/acs/acsse?get=NAME,K200801_002E&for=urban%20area:{i}&key={key}\")\n",
+    "    response = requests.get(f\"https://api.census.gov/data/2023/acs/acsse?get=NAME,K200801_004E&for=urban%20area:{i}&key={key}\")\n",
     "    if response.status_code == 200: \n",
     "        data = response.json()\n",
     "        value = data[1][1] \n",
@@ -636,7 +715,129 @@
     "        print(f\"Error: {response.status_code} for urban area code {i}\")\n",
     "        publicTransport.append(None)\n",
     "urban_areas_df['publicTransport'] = publicTransport\n",
-    "urban_areas_df.to_csv('../datasets/capstoneData.csv', index=False)\n",
+    "urban_areas_df.to_csv('../datasets/data.csv', index=False)\n",
+    "print(urban_areas_df.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "          City       State StateCode CensusCode  Population  sameHouse1yr  \\\n",
+      "0  Albuquerque  New Mexico        NM      01171      767499        664666   \n",
+      "1    Anchorage      Alaska        AK      02305      245624        197589   \n",
+      "2    Ann Arbor    Michigan        MI      02602      314647        240990   \n",
+      "3       Athens     Georgia        GA      03763      147368        111020   \n",
+      "4      Atlanta     Georgia        GA      03817     5211164       4492313   \n",
+      "\n",
+      "   transportCar publicTransport  medianIncome  employment  ...  \\\n",
+      "0        274494            4204         69754      400902  ...   \n",
+      "1         94067            1738         90793      140198  ...   \n",
+      "2        101623            7614         76811      174775  ...   \n",
+      "3         57523            1221         58872       80817  ...   \n",
+      "4       1756729           46795         88351     2881208  ...   \n",
+      "\n",
+      "   total_restaurants  total_parks  total_activities  total_nightlife  \\\n",
+      "0               1500          142              1100              222   \n",
+      "1                685          120               755              114   \n",
+      "2                599           73               678              124   \n",
+      "3                413           21               300              105   \n",
+      "4               2700          209              2600              783   \n",
+      "\n",
+      "   total_museums  max_avg_high  max_avg_low  mean_diff  International_airport  \\\n",
+      "0             57         100.8         10.9       89.9                      1   \n",
+      "1             38          77.7        -13.2       90.9                      1   \n",
+      "2             25          94.3         -5.6       99.9                      0   \n",
+      "3             11         100.0         15.0       85.0                      0   \n",
+      "4            134          97.3         15.2       82.1                      1   \n",
+      "\n",
+      "   transport  \n",
+      "0     378339  \n",
+      "1     131745  \n",
+      "2     164981  \n",
+      "3      75680  \n",
+      "4    2682472  \n",
+      "\n",
+      "[5 rows x 64 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "transport = []\n",
+    "for i in codes:\n",
+    "    response = requests.get(f\"https://api.census.gov/data/2023/acs/acsse?get=NAME,K200801_001E&for=urban%20area:{i}&key={key}\")\n",
+    "    if response.status_code == 200: \n",
+    "        data = response.json()\n",
+    "        value = data[1][1] \n",
+    "        transport.append(value) \n",
+    "    else:\n",
+    "        print(f\"Error: {response.status_code} for urban area code {i}\")\n",
+    "        transport.append(None)\n",
+    "urban_areas_df['transport'] = transport\n",
+    "urban_areas_df.to_csv('../datasets/data.csv', index=False)\n",
+    "print(urban_areas_df.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "          City       State StateCode CensusCode  Population  sameHouse1yr  \\\n",
+      "0  Albuquerque  New Mexico        NM      01171      767499        664666   \n",
+      "1    Anchorage      Alaska        AK      02305      245624        197589   \n",
+      "2    Ann Arbor    Michigan        MI      02602      314647        240990   \n",
+      "3       Athens     Georgia        GA      03763      147368        111020   \n",
+      "4      Atlanta     Georgia        GA      03817     5211164       4492313   \n",
+      "\n",
+      "   transportCar publicTransport  medianIncome  employment  ...  total_parks  \\\n",
+      "0        274494            4204         69754      400902  ...          142   \n",
+      "1         94067            1738         90793      140198  ...          120   \n",
+      "2        101623            7614         76811      174775  ...           73   \n",
+      "3         57523            1221         58872       80817  ...           21   \n",
+      "4       1756729           46795         88351     2881208  ...          209   \n",
+      "\n",
+      "   total_activities  total_nightlife  total_museums  max_avg_high  \\\n",
+      "0              1100              222             57         100.8   \n",
+      "1               755              114             38          77.7   \n",
+      "2               678              124             25          94.3   \n",
+      "3               300              105             11         100.0   \n",
+      "4              2600              783            134          97.3   \n",
+      "\n",
+      "   max_avg_low  mean_diff  International_airport  transport  walked  \n",
+      "0         10.9       89.9                      1     378339   14626  \n",
+      "1        -13.2       90.9                      1     131745    8976  \n",
+      "2         -5.6       99.9                      0     164981   12237  \n",
+      "3         15.0       85.0                      0      75680    2425  \n",
+      "4         15.2       82.1                      1    2682472  100699  \n",
+      "\n",
+      "[5 rows x 65 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "walked = []\n",
+    "for i in codes:\n",
+    "    response = requests.get(f\"https://api.census.gov/data/2023/acs/acsse?get=NAME,K200801_005E&for=urban%20area:{i}&key={key}\")\n",
+    "    if response.status_code == 200: \n",
+    "        data = response.json()\n",
+    "        value = data[1][1] \n",
+    "        walked.append(value) \n",
+    "    else:\n",
+    "        print(f\"Error: {response.status_code} for urban area code {i}\")\n",
+    "        walked.append(None)\n",
+    "urban_areas_df['walked'] = walked\n",
+    "urban_areas_df.to_csv('../datasets/data.csv', index=False)\n",
     "print(urban_areas_df.head())"
    ]
   },
