--- a/datasets/testing.ipynb
+++ b/datasets/testing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +75,7 @@
        "      <th>max_avg_high</th>\n",
        "      <th>max_avg_low</th>\n",
        "      <th>mean_diff</th>\n",
-       "      <th>International_airport</th>\n",
+       "      <th>international_airport</th>\n",
        "      <th>amtrak</th>\n",
        "      <th>crime_rate</th>\n",
        "      <th>pop_density</th>\n",
@@ -104,7 +104,7 @@
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>59.78</td>\n",
-       "      <td>1,365.37</td>\n",
+       "      <td>1365.37</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -128,7 +128,7 @@
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>18.00</td>\n",
-       "      <td>1,006</td>\n",
+       "      <td>1006.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -152,7 +152,7 @@
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>38.97</td>\n",
-       "      <td>170.6</td>\n",
+       "      <td>170.60</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -176,7 +176,7 @@
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>37.30</td>\n",
-       "      <td>3,102.92</td>\n",
+       "      <td>3102.92</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -200,7 +200,7 @@
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>41.56</td>\n",
-       "      <td>2,251.44</td>\n",
+       "      <td>2251.44</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -248,7 +248,7 @@
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>63.84</td>\n",
-       "      <td>3,300</td>\n",
+       "      <td>3300.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>96</th>\n",
@@ -272,7 +272,7 @@
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>23.07</td>\n",
-       "      <td>1,491.83</td>\n",
+       "      <td>1491.83</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>97</th>\n",
@@ -296,7 +296,7 @@
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>27.66</td>\n",
-       "      <td>3,391</td>\n",
+       "      <td>3391.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>98</th>\n",
@@ -320,7 +320,7 @@
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>51.06</td>\n",
-       "      <td>6,000</td>\n",
+       "      <td>6000.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>99</th>\n",
@@ -344,7 +344,7 @@
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>40.57</td>\n",
-       "      <td>1,991.23</td>\n",
+       "      <td>1991.23</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -391,7 +391,7 @@
        "98       1129593     0.713306  ...       0.000853      0.000526    0.000061   \n",
        "99         69092     0.794392  ...       0.001954      0.000479    0.000147   \n",
        "\n",
-       "    max_avg_high  max_avg_low  mean_diff  International_airport  amtrak  \\\n",
+       "    max_avg_high  max_avg_low  mean_diff  international_airport  amtrak  \\\n",
        "0           98.6         13.4       85.2                      1       1   \n",
        "1           99.2         11.7       87.5                      1       1   \n",
        "2           77.7        -13.2       90.9                      1       0   \n",
@@ -405,22 +405,22 @@
        "99          95.2        -13.0      108.2                      0       1   \n",
        "\n",
        "    crime_rate  pop_density  \n",
-       "0        59.78     1,365.37  \n",
-       "1        18.00        1,006  \n",
-       "2        38.97        170.6  \n",
-       "3        37.30     3,102.92  \n",
-       "4        41.56     2,251.44  \n",
+       "0        59.78      1365.37  \n",
+       "1        18.00      1006.00  \n",
+       "2        38.97       170.60  \n",
+       "3        37.30      3102.92  \n",
+       "4        41.56      2251.44  \n",
        "..         ...          ...  \n",
-       "95       63.84        3,300  \n",
-       "96       23.07     1,491.83  \n",
-       "97       27.66        3,391  \n",
-       "98       51.06        6,000  \n",
-       "99       40.57     1,991.23  \n",
+       "95       63.84      3300.00  \n",
+       "96       23.07      1491.83  \n",
+       "97       27.66      3391.00  \n",
+       "98       51.06      6000.00  \n",
+       "99       40.57      1991.23  \n",
        "\n",
        "[100 rows x 62 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
